--- a/Anastasia Kravchenko/Task 1/start_here.html
+++ b/Anastasia Kravchenko/Task 1/start_here.html
@@ -3,8 +3,9 @@
 <html>
     
 	<head>
-		<title>Програма помічник</title>
+		<title>Assistant program</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="login.png" rel="shortcut icon" type="image/x-icon" />
         <meta charset="utf-8">
         <link href="lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
@@ -14,27 +15,27 @@
     <body>
         <div class="container">
         
-            <h1>Програма помічник</h1>
+            <h1>Assistant program</h1>
 
             <div id="gallery">
 
                 <figure class="photo">
                     <img src="images/circle.png" alt="Eagle" id="circle-image" /></a>
-                    <figcaption>Коло</figcaption>
+                    <figcaption>Circle</figcaption>
                 </figure>
                 <figure class="photo">
                     <img src="images/rectangle.png" alt="Pasta" id="rectangle-image" /></a>
-                    <figcaption>Прямокутник</figcaption>
+                    <figcaption>Rectangle</figcaption>
                 </figure>
 
                 <figure class="photo">
                     <img src="images/square.png" alt="Squash" id="square-image" /></a>
-                    <figcaption>Квадрат</figcaption>
+                    <figcaption>Square</figcaption>
                 </figure>
 
                 <figure class="photo">
                     <img src="images/triangle.png" alt="Hills" id="triangle-image" /></a>
-                    <figcaption>Трикутник</figcaption>
+                    <figcaption>Triangle</figcaption>
                 </figure>
             </div>
         </div>
