--- a/Anastasia Kravchenko/Task 1/square.html
+++ b/Anastasia Kravchenko/Task 1/square.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <title>Калькулятор квадрата</title>
+      <title>Square calculator</title>
      
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div id="backs">Повернутися</div>
+    <div id="backs">Return</div>
       <form>
-            <h2>Програма для квадрата</h2>
-            Введіть довжину сторони: <input type="number" id="a" min=1 required>см<br><br>
-            <input type="button" value="Розрахувати" onclick="rez()">
+            <h2>Program for the square</h2>
+            Enter the length of the side: <input type="number" id="a" min=1 required>cm<br><br>
+            <input type="button" value="Calculate" onclick="rez()">
            
         <hr color="#b27866">
             <div id="textarea"></div>
@@ -33,11 +33,11 @@
         circumscribedRadius = a * (Math.sqrt(2) / 2);
         circumscribedRadius = circumscribedRadius.toFixed(2);
         document.getElementById("textarea").innerHTML = "Квадрат: " + "<br>" +
-            "Площа: " + area + " см²" + "<br>" +
-            "Периметр: " + perimeter + " см" + "<br>" +
-            "Діагональ: " + diagonal + " см" + "<br>" +
-            "Радіус вписаного кола: " + inscribedRadius + " см" + "<br>" +
-            "Радіус описаного кола: " + circumscribedRadius + " см";
+            "Area: " + area + " cm²" + "<br>" +
+            "Perimeter: " + perimeter + " cm" + "<br>" +
+            "Diagonal: " + diagonal + " cm" + "<br>" +
+            "Radius of the inscribed circle: " + inscribedRadius + " cm" + "<br>" +
+            "Radius of the described circle: " + circumscribedRadius + " cm";
     }
     $("#backs").click(function() {
         $(location).attr('href', 'start_here.html');
