--- a/Anastasia Kravchenko/Task 1/rectangle.html
+++ b/Anastasia Kravchenko/Task 1/rectangle.html
@@ -35,7 +35,7 @@
         alpha = alpha.toFixed(2);
         beta = Math.atan(a / b);
         beta = beta.toFixed(2);
-        document.getElementById("textarea").innerHTML = "Прямокутник: " + "<br>" +
+        document.getElementById("textarea").innerHTML = "Rectangle: " + "<br>" +
             "Area: " + area + " cm²" + "<br>" +
             "Perimeter: " + perimeter + " cm" + "<br>" +
             "Diagonal: " + diagonal + " cm" + "<br>" +
