--- a/Anastasia Kravchenko/Task 1/square.html
+++ b/Anastasia Kravchenko/Task 1/square.html
@@ -32,7 +32,7 @@
         inscribedRadius = inscribedRadius.toFixed(2);
         circumscribedRadius = a * (Math.sqrt(2) / 2);
         circumscribedRadius = circumscribedRadius.toFixed(2);
-        document.getElementById("textarea").innerHTML = "Квадрат: " + "<br>" +
+        document.getElementById("textarea").innerHTML = "Square: " + "<br>" +
             "Area: " + area + " cm²" + "<br>" +
             "Perimeter: " + perimeter + " cm" + "<br>" +
             "Diagonal: " + diagonal + " cm" + "<br>" +
